0.18.5	UNRELEASED

 BUG FIXES

  * Fix cwd for hooks. (Fabian Grünbichler)

  * Fix setting of origin in config when non-standard origin is passed into
    ``Repo.clone``. (Kenneth Lareau, #565)

 API CHANGES

  * GitFile now raises ``FileLocked`` when encountering a lock
    rather than OSError(EEXIST). (Jelmer Vernooĳ)

0.18.4	2017-10-01

 BUG FIXES

  * Make default User-Agent start with "git/" because GitHub won't response to
    HTTP smart server requests otherwise (and reply with a 404).
    (Jelmer vernooĳ, #562)

0.18.3	2017-09-03

 BUG FIXES

  * Read config during porcelain operations that involve remotes.
    (Jelmer Vernooĳ, #545)

  * Fix headers of empty chunks in unified diffs. (Taras Postument, #543)

  * Properly follow redirects over HTTP. (Jelmer Vernooĳ, #117)

 IMPROVEMENTS

  * Add ``dulwich.porcelain.update_head``. (Jelmer Vernooĳ, #439)

  * ``GitClient.fetch_pack`` now returns symrefs.
    (Jelmer Vernooĳ, #485)

  * The server now supports providing symrefs.
    (Jelmer Vernooĳ, #485)

  * Add ``dulwich.object_store.commit_tree_changes`` to incrementally
    commit changes to a tree structure. (Jelmer Vernooĳ)

  * Add basic ``PackBasedObjectStore.repack`` method.
    (Jelmer Vernooĳ, Earl Chew, #296, #549, #552)

0.18.2	2017-08-01

 TEST FIXES

  * Use constant timestamp so tests pass in all timezones, not just BST.
    (Jelmer Vernooĳ)

0.18.1	2017-07-31

 BUG FIXES

  * Fix syntax error in dulwich.contrib.test_swift_smoke.
    (Jelmer Vernooĳ)

0.18.0	2017-07-31

 BUG FIXES

  * Fix remaining tests on Windows. (Jelmer Vernooĳ, #493)

  * Fix build of C extensions with Python 3 on Windows.
    (Jelmer Vernooĳ)

  * Pass 'mkdir' argument onto Repo.init_bare in Repo.clone.
    (Jelmer Vernooĳ, #504)

  * In ``dulwich.porcelain.add``, if no files are specified,
    add from current working directory rather than repository root.
    (Jelmer Vernooĳ, #521)

  * Properly deal with submodules in 'porcelain.status'.
    (Jelmer Vernooĳ, #517)
